Ajuste swagger produto
